# Monzo-API-Viewer

./: setup.cfg
.github/workflows/: codeql-analysis.yml  pre-commit.yml  pypi.yml
monzo_api_viewer/: __init__.py  app.py  cli.py
monzo_api_viewer/helpers/: __init__.py  currencies.py  monzo_api_storage.py
monzo_api_viewer/models/: database.sql
monzo_api_viewer/templates/: account_select.html  accounts.html  index.html  main.html  pot.html  pots.html  setup.html  success.html  transaction.html  transactions.html
