[metadata]
name = Monzo API Viewer
version = 0.0.2
author = Peter McDonald
author_email = git@petermcdonald.co.uk
description = Package to allow you to play with the Monzo API
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/petermcd/monzo-api-viewer
project_urls =
    Bug Tracker = https://github.com/petermcd/monzo-api-viewer/issues
    Source = https://github.com/petermcd/monzo-api-viewer
classifiers =
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Office/Business :: Financial
install_requires =
    flask==3.0.2
    monzo-api==1.1.0

[options]
packages = find:
python_requires = >=3.7

[options.extras_require]
build = wheel; build;

[options.entry_points]
console_scripts = start-server = monzo_api_viewer.cli:start

[options.package_data]
monzo_viewer.static.css = *.css|*.map
monzo_viewer.static.js = *.js
monzo_viewer.templates = *.html

[flake8]
max_line_length = 120
